[tool.poetry]
name = "texviper"
version = "0.1.0"
description = "LaTeX Editor"
authors = ["Nuutti Varvikko <nuutti.varvikko@helsinki.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = ">=3.6,<3.10"
invoke = "^1.5.0"
PySide2 = "^5.15.2"
pathlib = "^1.0.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pylint = "^2.7.4"
coverage = "^5.5"
pyfakefs = "^4.4.0"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

